fix slider block gap on video page

--- a/css/style.css
+++ b/css/style.css
@@ -1077,6 +1077,7 @@ input[class~="btn--yellow"] {
 #video-page .pictures-block,
 #video-page .videos-block,
 #video-page .comments-block,
+#video-page .slider-block,
 #model-page .pictures-block,
 #model-page .videos-block,
 #model-page .comments-block,
@@ -3004,6 +3005,7 @@ div[data-icon] {
     #video-page .pictures-block,
     #video-page .videos-block,
     #video-page .comments-block,
+    #video-page .slider-block,
     #model-page .pictures-block,
     #model-page .videos-block,
     #model-page .comments-block,
@@ -4545,6 +4547,7 @@ div[data-icon] {
     #video-page .pictures-block,
     #video-page .videos-block,
     #video-page .comments-block,
+    #video-page .slider-block,
     #model-page .model-profile-block,
     #model-page .pictures-block,
     #model-page .videos-block,
